fix layout shift

--- a/styles/components/page/landing.css
+++ b/styles/components/page/landing.css
@@ -70,13 +70,13 @@
       & .cta-arrow {
         width: 0.75em;
         @media (min-width: 78.75rem) {
-          width: max(0.75rem, 0.9em);
+          width: max(0.75rem, 0.95em);
         }
       }
       @media (min-width: 78.75rem) {
         width: max(18.9375rem, 19.9em);
         height: max(4rem, 5em);
-        gap: max(0.75rem, 1em);
+        gap: 0.75rem;
         margin: auto 0 0.75em;
         & span {
           font-size: max(1rem, 1.125em);
@@ -98,19 +98,21 @@
       transform-origin: bottom;
     }
     @media (min-width: 48rem) {
-      width: clamp(17em, 24vw + 4.5em, 22em);
+      width: clamp(16.8em, 24vw + 4.5em, 22em);
       margin-left: 0.5em;
+      margin-top: calc(16vw - 9rem);
       & img {
         top: auto !important;
-        bottom: calc(13vw - 17.8rem) !important;
+        bottom: calc(15.3vw - 19rem) !important;
       }
     }
     @media (min-width: 78.75rem) {
       width: inherit;
-      height: 37.5em; /* this line scales the entire container dynamically */
+      height: 37.5em;
+      margin-top: 0;
       aspect-ratio: 722 / 600;
       background: var(--clr-section-bg);
-      border-radius: 6.5em; /* mantain the border radius while scaling */
+      border-radius: 6.5em;
       box-shadow: 0px 0.25em 1em rgba(0, 0, 0, 0.12);
       & span {
         overflow: visible !important; /* overwrites next/image component styles for this case */
